# https://pypi.org/project/setupcfg-generator/
[metadata]
name = markdown-table
version = 2019.03.06
url = https://github.com/looking-for-a-job/markdown-table.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = markown table

[options]
install_requires = 
	public
	setuptools
packages = 
	markdown_table
